--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
-path_separator = \
+; path separator
+ps = /
 
-projects_folder = 
-texteditor_path = 
+projects_folder = "/home/serega/projects" 
+texteditor = sublime_text 
 
-keepass_path = 
+keepass = 
 keepass_database = 
 
